Add initial jitsi call code

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@fontsource/inter": "4.5.14",
     "@fontsource/roboto": "4.5.8",
+    "@jitsi/react-sdk": "1.3.0",
     "@khanacademy/simple-markdown": "0.8.6",
     "@matrix-org/olm": "3.2.14",
     "@tippyjs/react": "4.2.6",
