--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "file-saver": "2.0.5",
     "flux": "4.0.3",
     "focus-trap-react": "10.0.2",
-    "folds": "1.0.6",
+    "folds": "1.0.7",
     "formik": "2.2.9",
     "html-react-parser": "3.0.4",
     "immer": "9.0.16",
@@ -58,12 +58,14 @@
     "slate": "0.90.0",
     "slate-react": "0.90.0",
     "tippy.js": "6.3.7",
-    "twemoji": "14.0.2"
+    "twemoji": "14.0.2",
+    "ua-parser-js": "1.0.35"
   },
   "devDependencies": {
     "@rollup/plugin-wasm": "6.1.1",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@types/ua-parser-js": "0.7.36",
     "@typescript-eslint/eslint-plugin": "5.46.1",
     "@typescript-eslint/parser": "5.46.1",
     "@vitejs/plugin-react": "3.0.0",
