--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "browser-encrypt-attachment": "0.3.0",
     "classnames": "2.3.2",
     "dateformat": "5.0.3",
+    "emojibase": "6.1.0",
     "emojibase-data": "7.0.1",
     "file-saver": "2.0.5",
     "flux": "4.0.3",
     "focus-trap-react": "10.0.2",
-    "folds": "1.1.0",
+    "folds": "1.1.1",
     "formik": "2.2.9",
     "html-react-parser": "3.0.4",
     "immer": "9.0.16",
