--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
     "focus-trap-react": "10.0.2",
     "folds": "1.3.0",
     "formik": "2.2.9",
-    "html-react-parser": "3.0.4",
+    "html-react-parser": "4.2.0",
     "immer": "9.0.16",
     "is-hotkey": "0.2.0",
     "jotai": "1.12.0",
     "katex": "0.16.4",
     "linkify-html": "4.0.2",
+    "linkify-react": "4.1.1",
     "linkifyjs": "4.0.2",
     "matrix-js-sdk": "24.1.0",
     "millify": "6.1.0",
