--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "browser-encrypt-attachment": "0.3.0",
     "classnames": "2.3.2",
     "dateformat": "5.0.3",
+    "dayjs": "1.11.10",
     "emojibase": "6.1.0",
     "emojibase-data": "7.0.1",
     "file-saver": "2.0.5",
