--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "formik": "2.2.9",
     "html-dom-parser": "4.0.0",
     "html-react-parser": "4.2.0",
+    "i18next": "23.11.3",
+    "i18next-browser-languagedetector": "7.2.1",
+    "i18next-http-backend": "2.5.1",
     "immer": "9.0.16",
     "is-hotkey": "0.2.0",
     "jotai": "2.6.0",
@@ -64,6 +67,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.10",
     "react-google-recaptcha": "2.1.0",
+    "react-i18next": "14.1.1",
     "react-modal": "3.16.1",
     "react-range": "1.8.14",
     "react-router-dom": "6.20.0",
