--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/prismjs": "1.26.0",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
+    "@types/react-google-recaptcha": "2.1.8",
     "@types/sanitize-html": "2.9.0",
     "@types/ua-parser-js": "0.7.36",
     "@typescript-eslint/eslint-plugin": "5.46.1",
