--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fontsource/inter": "4.5.14",
     "@khanacademy/simple-markdown": "0.8.6",
     "@matrix-org/olm": "3.2.14",
+    "@tanstack/react-query": "5.24.1",
+    "@tanstack/react-query-devtools": "5.24.1",
     "@tanstack/react-virtual": "3.0.4",
     "@tippyjs/react": "4.2.6",
     "@vanilla-extract/css": "1.9.3",
