--- a/config.json
+++ b/config.json
@@ -11,7 +11,14 @@
   "allowCustomHomeservers": true,
 
   "featuredCommunities": {
-    "spaces": ["#cinny-space:matrix.org", "#community:matrix.org", "#space:envs.net"],
+    "spaces": [
+      "#cinny-space:matrix.org",
+      "#community:matrix.org",
+      "#space:envs.net",
+      "#science-space:matrix.org",
+      "#libregaming-games:tchncs.de",
+      "#mathematics-on:matrix.org"
+    ],
     "rooms": [
       "#cinny:matrix.org",
       "#foundation-office:matrix.org",
