--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@fontsource/inter": "4.5.14",
     "@khanacademy/simple-markdown": "0.8.6",
     "@matrix-org/olm": "3.2.14",
+    "@react-three/drei": "9.105.1",
+    "@react-three/fiber": "8.16.1",
+    "@react-three/postprocessing": "2.16.2",
+    "@react-three/rapier": "1.3.0",
     "@tanstack/react-virtual": "3.0.0-beta.54",
     "@tippyjs/react": "4.2.6",
     "@vanilla-extract/css": "1.9.3",
@@ -41,6 +45,7 @@
     "focus-trap-react": "10.0.2",
     "folds": "1.5.1",
     "formik": "2.2.9",
+    "framer-motion": "11.0.24",
     "html-dom-parser": "4.0.0",
     "html-react-parser": "4.2.0",
     "immer": "9.0.16",
@@ -50,6 +55,7 @@
     "linkify-html": "4.0.2",
     "linkify-react": "4.1.1",
     "linkifyjs": "4.0.2",
+    "maath": "0.10.7",
     "matrix-js-sdk": "29.1.0",
     "millify": "6.1.0",
     "pdfjs-dist": "3.10.111",
@@ -71,9 +77,11 @@
     "slate": "0.94.1",
     "slate-history": "0.93.0",
     "slate-react": "0.98.4",
+    "three": "0.163.0",
     "tippy.js": "6.3.7",
     "twemoji": "14.0.2",
-    "ua-parser-js": "1.0.35"
+    "ua-parser-js": "1.0.35",
+    "usehooks-ts": "3.0.2"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "0.2.3",
