--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "twype",
   "version": "3.2.0",
-  "description": "Yet another matrix client",
+  "description": "web3 native social platform",
   "main": "index.js",
   "engines": {
     "node": ">=16.0.0"
