drag-and-drop ordering of lobby spaces/rooms - WIP

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "Ajay Bura",
   "license": "AGPL-3.0-only",
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "1.1.6",
+    "@atlaskit/pragmatic-drag-and-drop-auto-scroll": "1.3.0",
     "@fontsource/inter": "4.5.14",
     "@khanacademy/simple-markdown": "0.8.6",
     "@matrix-org/olm": "3.2.14",
