--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.2.0",
   "description": "Yet another matrix client",
   "main": "index.js",
+  "type": "module",
   "engines": {
     "node": ">=16.0.0"
   },
