add ngnix conf file for docker build

--- a/contrib/nginx/cinny.domain.tld.conf
+++ b/contrib/nginx/cinny.domain.tld.conf
@@ -19,9 +19,16 @@ server {
 
 	location / {
 		root /opt/cinny/dist/;
-		index index.html;
-	}
-	location ~* ^\/(login|register) {
-		try_files $uri $uri/ /index.html;
+
+		rewrite ^/config.json$ /config.json break;
+    rewrite ^/manifest.json$ /manifest.json break;
+
+    rewrite ^.*/olm.wasm$ /olm.wasm break;
+    rewrite ^/pdf.worker.min.js$ /pdf.worker.min.js break;
+
+    rewrite ^/public/(.*)$ /public/$1 break;
+    rewrite ^/assets/(.*)$ /assets/$1 break;
+
+    rewrite ^(.+)$ /index.html break;
 	}
 }
