--- a/config.json
+++ b/config.json
@@ -22,10 +22,11 @@
     ],
     "rooms": [
       "#cinny:matrix.org",
-      "#foundation-office:matrix.org",
-      "#thisweekinmatrix:matrix.org",
-      "#matrix-dev:matrix.org",
-      "#matrix:matrix.org"
+      "#freesoftware:matrix.org",
+      "#pcapdroid:matrix.org",
+      "#gentoo:matrix.org",
+      "#PrivSec.dev:arcticfoxes.net",
+      "#disroot:aria-net.org"
     ],
     "servers": ["envs.net", "matrix.org", "monero.social", "mozilla.org"]
   },
