--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -1,8 +1,11 @@
 server {
-  location / {
-		root /usr/share/nginx/html;
+  listen 80;
+  listen [::]:80;
 
-		rewrite ^/config.json$ /config.json break;
+  location / {
+    root /usr/share/nginx/html;
+
+    rewrite ^/config.json$ /config.json break;
     rewrite ^/manifest.json$ /manifest.json break;
 
     rewrite ^.*/olm.wasm$ /olm.wasm break;
@@ -12,5 +15,5 @@ server {
     rewrite ^/assets/(.*)$ /assets/$1 break;
 
     rewrite ^(.+)$ /index.html break;
-	}
+  }
 }
